--- a/style/main.css
+++ b/style/main.css
@@ -17,21 +17,41 @@ main {
   margin: 2rem;
 }
 
+details[data-loader] {
+  margin-left: 0;
+  border-left: none;
+  margin-right: 0;
+  border-right: none;
+  box-shadow: none;
+  background: rgb(25 25 25 / 10%);
+}
+
 app-page {
   & > details:last-child {
-    border-bottom: 1px solid #525252ff;
+    border-bottom: 1px solid #3a3a3a8c;
+  }
+
+  & > details[data-loader] {
+    border-left: 1px solid #3a3a3a8c;
+    margin-left: 1rem;
+    border-right: 1px solid #3a3a3a8c;
+    margin-right: 1rem;
+    box-shadow: none;
+    background-color: rgb(0 0 0 / 16%);
   }
 
   & > details > section {
-    border-top: 1px solid #525252ff;
+    border-top: 1px solid #3a3a3a8c;
     padding: 1rem;
   }
 
   & > details {
-    border-right: 1px solid #525252ff;
+    border-right: 1px solid #3a3a3a8c;
+    margin-right: 1rem;
+    box-shadow: none;
 
     &[open] {
-      border-bottom: 1px solid #525252ff;
+      border-bottom: 1px solid #3a3a3a8c;
     }
 
     & > summary {
@@ -41,7 +61,7 @@ app-page {
   }
 
   & > details:first-child > summary {
-    border-top: 1px solid #525252ff;
+    border-top: 1px solid #3a3a3a8c;
   }
 
   & > details summary > button {
@@ -56,14 +76,18 @@ details[data-deleted] {
 details {
   display: flex;
   flex-direction: column;
-  border-left: 1px solid #525252ff;
+  border-left: 1px solid #3a3a3a8c;
   margin-left: 1rem;
+  border-right: 1px solid #3a3a3a8c;
+  margin-right: 1rem;
   background-color: rgb(0 0 0 / 16%);
+  box-shadow: 2px 10px 8px inset rgb(5 5 5 / 50%);
 
   summary {
     display: inline-flex;
-    border-top: 1px solid #525252ff;
+    border-top: 1px solid #3a3a3a8c;
     cursor: pointer;
+    padding: 0.35rem 0 0.35rem 0.75rem;
 
     & > div + div {
       display: none;
@@ -89,7 +113,7 @@ details {
 
     h1 {
       font-size: 1.5rem;
-      padding: 1rem;
+      padding: 0.75rem;
       font-weight: 500;
 
       a {
@@ -104,9 +128,8 @@ details {
 
     h2 {
       line-height: 1.2rem;
-      padding: 1rem 1rem 1rem 1.5rem;
+      padding: 0.75rem;
       font-size: 1rem;
-      font-weight: 700;
 
       span {
         font-weight: bold;
@@ -121,9 +144,9 @@ details {
     div {
       display: flex;
       flex-direction: column;
-      padding: 0.5rem 0 0 0.5rem;
       align-items: center;
       width: 3rem;
+      justify-content: space-evenly;
 
       span {
         display: flex;
@@ -169,6 +192,7 @@ details[open] {
 }
 
 details:not([open]) {
+  box-shadow: none;
   summary {
     h2 {
       &::after {
@@ -182,10 +206,10 @@ button {
   display: flex;
   justify-content: center;
   appearance: none;
-  color: #525252ff;
+  color: #3a3a3a8c;
   background: transparent;
   border: none;
-  border-top: 1px solid #525252ff;
+  border-top: 1px solid #3a3a3a8c;
   cursor: pointer;
   padding: 0.5rem 1rem;
   font-size: 1rem;
