--- a/style/main.css
+++ b/style/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-  margin: 2rem;
+  margin: 3rem 2rem;
 }
 
 details[data-loader] {
@@ -23,7 +23,7 @@ details[data-loader] {
   margin-right: 0;
   border-right: none;
   box-shadow: none;
-  background: rgb(25 25 25 / 10%);
+  background-color: transparent;
 }
 
 app-page {
@@ -33,11 +33,10 @@ app-page {
 
   & > details[data-loader] {
     border-left: 1px solid #3a3a3a8c;
-    margin-left: 1rem;
     border-right: 1px solid #3a3a3a8c;
-    margin-right: 1rem;
     box-shadow: none;
     background-color: rgb(0 0 0 / 16%);
+    margin: 0;
   }
 
   & > details > section {
@@ -47,7 +46,7 @@ app-page {
 
   & > details {
     border-right: 1px solid #3a3a3a8c;
-    margin-right: 1rem;
+    margin: 0;
     box-shadow: none;
 
     &[open] {
@@ -88,9 +87,11 @@ details {
     border-top: 1px solid #3a3a3a8c;
     cursor: pointer;
     padding: 0.35rem 0 0.35rem 0.75rem;
+    transition: all 250ms ease-in-out;
 
     & > div + div {
       display: none;
+      transition: all 250ms ease-in-out;
     }
 
     &:hover {
@@ -206,14 +207,16 @@ button {
   display: flex;
   justify-content: center;
   appearance: none;
-  color: #3a3a3a8c;
+  color: #5f5f5fbb;
   background: transparent;
   border: none;
   border-top: 1px solid #3a3a3a8c;
   cursor: pointer;
-  padding: 0.5rem 1rem;
+  padding: 0.2rem 1rem;
   font-size: 1rem;
   width: 100%;
+  overflow: hidden;
+  transition: all 250ms ease-in-out;
 
   &:hover {
     background-color: #313131ff;
