--- a/style/main.css
+++ b/style/main.css
@@ -1,30 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Vend+Sans:wght@0,300..700;1,300..700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Vend+Sans:wght@0,300..700;1,300..700&display=swap'); */
+@import url('theme.css');
 
 html {
-  box-sizing: border-box;
-  background-color: #222222;
-  color: #bbb;
   font-family: 'Vend sans', sans-serif;
   font-size: 0.18in;
-}
-
-h1,
-h2 {
-  cursor: pointer;
 }
 
 article {
   padding: 0 0 0 1rem;
 
-  details {
-    summary {
-      display: none;
-    }
-  }
-
   &[data-dead] {
     display: none;
   }
+}
+
+h1,
+h2 {
+  cursor: pointer;
 }
 
 h2:has(~ details:not([open])) {
@@ -36,5 +28,11 @@ h2:has(~ details:not([open])) {
 h2:has(~ details[open]) {
   &::after {
     content: '[─]';
+  }
+}
+
+details {
+  summary {
+    display: none;
   }
 }
