adding reply to comment, refactoring server and index.js

--- a/style/theme.css
+++ b/style/theme.css
@@ -7,3 +7,10 @@ html {
   background-color: var(--color-background);
   color: var(--color-foreground);
 }
+
+article {
+  textarea {
+    background: inherit;
+    color: inherit;
+  }
+}
