refactoring item render to use template instead of creating elements, adjusting logic

--- a/style/theme.css
+++ b/style/theme.css
@@ -8,6 +8,11 @@ html {
   color: var(--color-foreground);
 }
 
+button {
+  background: inherit;
+  color: inherit;
+}
+
 article {
   textarea {
     background: inherit;
