--- a/style/main.css
+++ b/style/main.css
@@ -6,28 +6,36 @@ html {
   font-size: 0.18in;
 }
 
+h1,
+h2,
+button {
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+button {
+  appearance: none;
+}
+
+h2 {
+  &:has(~ details:not([open])) {
+    &::after {
+      content: '[🞤]';
+    }
+  }
+
+  &:has(~ details[open]) {
+    &::after {
+      content: '[─]';
+    }
+  }
+}
+
 article {
   padding: 0 0 0 1rem;
 
   textarea {
     width: 100%;
-  }
-}
-
-h1,
-h2 {
-  cursor: pointer;
-}
-
-h2:has(~ details:not([open])) {
-  &::after {
-    content: '[🞤]';
-  }
-}
-
-h2:has(~ details[open]) {
-  &::after {
-    content: '[─]';
   }
 }
 
