--- a/style/theme.css
+++ b/style/theme.css
@@ -1,6 +1,8 @@
 html.theme-gruvbox {
   --color-background: #222;
   --color-foreground: #bbb;
+  --color-secondary: #888;
+  --color-highlight: #eee;
 }
 
 html {
@@ -8,9 +10,19 @@ html {
   color: var(--color-foreground);
 }
 
+a,
 button {
   background: inherit;
   color: inherit;
+}
+
+button:hover,
+a:hover {
+  color: var(--color-highlight);
+}
+
+a:visited {
+  color: var(--color-secondary);
 }
 
 article {
