adding Query.container, refactoring Page and View to use Query.container, changing endpoint class to be HN and use id, refactoring to use id of API in Page attribute, padding adjustment

--- a/style/main.css
+++ b/style/main.css
@@ -57,6 +57,7 @@ h2 {
   font-size: 1rem;
   font-weight: normal;
   margin: 0 0 0.5rem -0.2rem;
+  line-height: 1rem;
 
   &:has(~ details:not([open])) {
     &::after {
@@ -107,6 +108,10 @@ article {
 
     section {
       padding: 0 2rem 1rem 1.2rem;
+
+      & > div {
+        padding-top: 1.4rem;
+      }
 
       & > button {
         font-weight: bold;
