--- a/style/theme.css
+++ b/style/theme.css
@@ -10,6 +10,15 @@ html {
   color: var(--color-foreground);
 }
 
+main {
+  nav {
+    background-color: var(--color-background);
+
+    a:hover {
+      color: var(--color-highlight);
+    }
+  }
+}
 h2 {
   color: var(--color-secondary);
 
