--- a/style/main.css
+++ b/style/main.css
@@ -26,6 +26,15 @@ main {
       padding: 1rem 1rem 1.7rem 1rem;
     }
   }
+
+  aside {
+    display: none;
+    margin-top: 6rem;
+
+    &.active {
+      display: flex;
+    }
+  }
 }
 
 app-page {
